--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -39,6 +39,11 @@ img{
     height: 280px;
     object-fit: cover;
   }
+
+  .aligncenter{
+    display: block;
+    margin: 3rem auto;
+  }
 }
 
 .site-width{
